cmake_minimum_required(VERSION 3.22)
file(STRINGS VERSION VER)
project(nats-logger LANGUAGES C VERSION "${VER}")

set(CMAKE_C_STANDARD 17)

set(CPACK_PACKAGING_INSTALL_PREFIX "/opt/nats-logger")
set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib:${CPACK_PACKAGING_INSTALL_PREFIX}/lib")
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

add_subdirectory(libs/cnats)
include_directories(libc/cnats/src)

set(RESOURCE_FILES LICENSE README.md)
add_executable(nats_logger main.c libs/jsmn-stream/jsmn_stream.c)

target_link_libraries(nats_logger nats)

install(TARGETS nats_logger DESTINATION bin)

set(CPACK_GENERATOR "DEB")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Constantine Peresypkin <pconstantine@gmail.com>")
set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS_PRIVATE_DIRS ${CPACK_PACKAGING_INSTALL_PREFIX}/lib)
set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
set(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
set(CPACK_OUTPUT_FILE_PREFIX "${CMAKE_SOURCE_DIR}/dist")
set(CPACK_STRIP_FILES YES)
set(
        CPACK_INSTALL_DEFAULT_DIRECTORY_PERMISSIONS
        OWNER_READ OWNER_WRITE OWNER_EXECUTE
        GROUP_READ GROUP_EXECUTE
        WORLD_READ WORLD_EXECUTE
)
include(CPack)
